--- a/Pasta_01/Analise criminalidade.ipynb
+++ b/Pasta_01/Analise criminalidade.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 2,
    "id": "ab5235dd",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 3,
    "id": "e6763c39",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 6,
    "id": "054564f3",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 7,
    "id": "730b5f31",
    "metadata": {},
    "outputs": [
@@ -514,7 +514,7 @@
        "4            1.0        Xiaomi  "
       ]
      },
-     "execution_count": 127,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 8,
    "id": "3ce88ac6",
    "metadata": {},
    "outputs": [
@@ -1004,7 +1004,7 @@
        "24304       Samsung  "
       ]
      },
-     "execution_count": 128,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 9,
    "id": "195fc8a7",
    "metadata": {},
    "outputs": [
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 10,
    "id": "2b8cc925",
    "metadata": {},
    "outputs": [
@@ -1159,7 +1159,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 11,
    "id": "5ffbe3b0",
    "metadata": {},
    "outputs": [
@@ -1201,7 +1201,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 12,
    "id": "aa2352e8",
    "metadata": {},
    "outputs": [
@@ -1249,7 +1249,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1263,42 +1263,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 22,
    "id": "7dda17fd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "CIDADE\n",
-       "ADAMANTINA          1\n",
-       "AGUAI               1\n",
-       "AGUDOS              1\n",
-       "ALUMINIO            2\n",
-       "AMERICANA          39\n",
-       "                   ..\n",
-       "VARZEA PAULISTA    25\n",
-       "VERA CRUZ           4\n",
-       "VINHEDO            41\n",
-       "VIRADOURO           2\n",
-       "VOTORANTIM         13\n",
-       "Length: 244, dtype: int64"
+       "S.PAULO                13300\n",
+       "S.BERNARDO DO CAMPO      952\n",
+       "GUARULHOS                800\n",
+       "S.ANDRE                  704\n",
+       "OSASCO                   618\n",
+       "                       ...  \n",
+       "CACHOEIRA PAULISTA         1\n",
+       "ITAPEVA                    1\n",
+       "AGUDOS                     1\n",
+       "SERRANA                    1\n",
+       "S.SIMAO                    1\n",
+       "Name: CIDADE, Length: 244, dtype: int64"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Aqui estamos filtrando por cidade de ocorrência\n",
-    "cidades_roubos=roubos_celulares.groupby(['CIDADE']).size()\n",
-    "cidades_roubos\n"
+    "# Aqui estamos filtrando pelas cinco primeiras cidades de maiores ocorrência\n",
+    "roubos_celulares['CIDADE'].value_counts()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 14,
    "id": "cc5f326e",
    "metadata": {},
    "outputs": [
@@ -1314,7 +1312,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1328,71 +1326,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 19,
    "id": "7ca0353d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "BAIRRO\n",
-       "(L-9)                       1\n",
-       ".                           1\n",
-       "A Definir                   1\n",
-       "ABERNESSIA                  1\n",
-       "ADALGISA                    1\n",
-       "                           ..\n",
-       "Água Branca                30\n",
-       "Água Chata                  3\n",
-       "Água Espraiada              1\n",
-       "Água Funda                  2\n",
-       "Área Rural de Rio Claro     2\n",
-       "Length: 3412, dtype: int64"
+       "CENTRO                   484\n",
+       "Centro                   335\n",
+       "REPUBLICA                327\n",
+       "JABAQUARA                228\n",
+       "CAPAO REDONDO            221\n",
+       "                        ... \n",
+       "Chácara do Conde           1\n",
+       "VILA MAYOR                 1\n",
+       "ZONA CENTRAL               1\n",
+       "Cidade Morumbi             1\n",
+       "Vila dos Comerciarios      1\n",
+       "Name: BAIRRO, Length: 3412, dtype: int64"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# apresentando os dados por Bairro onde ocorreram os roubos\n",
-    "bairro=roubos_celulares.groupby(['BAIRRO']).size()\n",
-    "bairro"
+    "roubos_celulares['BAIRRO'].value_counts()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 21,
    "id": "e3f8894f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LOGRADOURO\n",
-       "ACAMPAMENTO ACARICUARA                      1\n",
-       "ACESSO ACESSO                               1\n",
-       "ACESSO ACESSO A RODOVIA DOS BANDEIRANTES    3\n",
-       "ACESSO ACESSO AO RODOANEL                   4\n",
-       "ACESSO ALAMEDA JOSÉ CARDEAL                 1\n",
-       "                                           ..\n",
-       "rua jose inacio alves                       1\n",
-       "rua maestro benedito josé da rocha          1\n",
-       "rua onze                                    2\n",
-       "rua treze                                   1\n",
-       "Área Rural                                  2\n",
-       "Length: 9881, dtype: int64"
+       "RUA AMERICO VESPUCCI                 112\n",
+       "ACESSO RODOVIA CASTELO BRANCO         93\n",
+       "RUA COMENDADOR NESTOR PEREIRA         89\n",
+       "RODOVIA PRESIDENTE DUTRA (BR 116)     75\n",
+       "Avenida Ragueb Chohfi                 69\n",
+       "                                    ... \n",
+       "RUA DA FE                              1\n",
+       "RUA DESEMBARGADOR DO VALE              1\n",
+       "Rua Nilza Maria Pereira Simplicio      1\n",
+       "RUA JOSÉ TEIXEIRA                      1\n",
+       "RUA PEDRO DA SILVEIRA                  1\n",
+       "Name: LOGRADOURO, Length: 9881, dtype: int64"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Apresentadno os dados por ruas onde ocorreram os furtos\n",
-    "roubos_celulares.groupby(['LOGRADOURO']).size()\n"
+    "# Apresentadno os dados das cinco ruas onde ocorreram maiores  furtos\n",
+    "roubos_celulares['LOGRADOURO'].value_counts()\n"
    ]
   },
   {
