--- a/Analise_criminalidade_nova_versao.ipynb
+++ b/Analise_criminalidade_nova_versao.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ab5235dd",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "054564f3",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "730b5f31",
    "metadata": {},
    "outputs": [
@@ -514,7 +514,7 @@
        "4            1.0        Xiaomi  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "3ce88ac6",
    "metadata": {},
    "outputs": [
@@ -1004,7 +1004,7 @@
        "24304       Samsung  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "195fc8a7",
    "metadata": {},
    "outputs": [
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "2b8cc925",
    "metadata": {},
    "outputs": [
@@ -1159,7 +1159,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "5ffbe3b0",
    "metadata": {},
    "outputs": [
@@ -1201,7 +1201,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "aa2352e8",
    "metadata": {},
    "outputs": [
@@ -1249,7 +1249,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "7dda17fd",
    "metadata": {},
    "outputs": [
@@ -1284,7 +1284,7 @@
        "Name: CIDADE, Length: 244, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "cc5f326e",
    "metadata": {},
    "outputs": [
@@ -1312,7 +1312,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "7ca0353d",
    "metadata": {},
    "outputs": [
@@ -1347,7 +1347,7 @@
        "Name: BAIRRO, Length: 3412, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1359,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "e3f8894f",
    "metadata": {},
    "outputs": [
@@ -1380,7 +1380,7 @@
        "Name: LOGRADOURO, Length: 9881, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1392,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 15,
    "id": "f8ef4b60",
    "metadata": {},
    "outputs": [
@@ -1429,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 16,
    "id": "55d316fc",
    "metadata": {},
    "outputs": [
@@ -1454,6 +1454,16 @@
    "id": "dd8ea975",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a0ad13ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from prettytable import PrettyTable"
+   ]
   }
  ],
  "metadata": {
